# h264-decoder

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: annexb.c  annexb.h  bitreader.c  bitreader.h  cavlc.c  cavlc.h  common.h  decoder.c  decoder.h  dequant.c  dequant.h  dpb.c  dpb.h  expgolomb.c  global.h  intra.c  intra.h  mb.c  mb.h  mv.c  mv.h  mvpred.c  mvpred.h  nal.c  nal.h  picture.c  picture.h  pps.c  pps.h  ps.c  ps.h  slice.c  slice.h  sps.h  transform.c  transform.h  vlc.c  vlc.h
src/tests/: a.h  annexb_test.c  b.h  cavlc_test.c  gen_rgb_video.c  mb_test.c  misc_test.c  profiler.c  profiler.h  sps_pps_test.c  streamcomp.c
src/util/: bitreader.c  bitreader.h  expgolomb.c  expgolomb.h  formulas.h  logger.c  logger.h  mbutil.h  predutil.h  sliceutil.h
tests/: annexb_test.c  golomb_test.c  mb_test.c  sps_pps_test.c  sps_test.c
videos/h264/: 16x16_linear.h264  256x256_radial.h264  32x32_vertical.h264  64x64_diagonal.h264
